assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700|Exo:100,200,300,400,500,600,700');

/* Colours */

.bg-color-name-title {
    background: #3e9897;
}

.bg-color-three-reasons {
    background-color: #fff;

}

.bg-color-personal-info {
    background-color: #f4f4f4;
}

.ui-menu-color-home {
    background-color: #e67e22;
}

.ui-menu-color-resume {
    background-color: #9b59b6;
}

.ui-menu-color-contact {
    background-color: #3498db;
}

.ui-menu-color-download {
    background-color: #525252;
}


/* Special paddings/margins/text */

h1, h2, h3, h4 {
    margin: 0;
}

.uppercase {
    text-transform: uppercase;
}

.general-sub {
    font-family: "Exo", sans-serif;
    font-weight: 300;
    color: #fafafa;
}

.inline-block {
    display: inline-block;
}

.row-table {
    display: table;
}

.section-column {
    display: table-cell;
    padding: 0 30px 30px;
    float: none;
}

.section-heading {
    font-family: "Exo", sans-serif;
    font-weight: 300;
    margin-top: 25px;
    margin-bottom: 40px;
}

/* Heading */

header {
    margin: 0;
}

.heading {
    margin-left: 50px;
}

.logo {
    background: url("../images/avatar.jpg");
    background-position: top;
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 360px;
    transition: all .5s ease-in-out;
    -moz-transition: all .5s ease-in-out;
    -webkit-transition: all .5s ease-in-out;
    filter: contrast(1.3) saturate(0.6);
}

.name {
    font-family: 'Exo', sans-serif;
    font-weight: 100;
    font-size: 46px;
    margin-top: 50px;
    color: white;
}

.title {
    font-family: "Roboto", sans-serif;
    font-weight: 300;
    font-size: 28px;
    margin-top: 20px;
    margin-bottom: 90px;
    color: white;
}

/* remove space between list items */
.list-inline-item:not(:last-child) {
    margin-right: 0;
}

.menucontainer {
    font-size: 0;
}

#nav {
    margin: 0;
}

#nav li {
    font-size: 14px;
    padding: 0;
}
/* --- */

.menuitem {
    height: 120px;
    text-align: center;
    padding: 0;
}

.menuitem a {
    width: 100%;
    text-decoration: none;
    color: white;
    height: 120px;
}

.menuitem a i {
    padding-top: 22px;
    display: block;
    color: #fafafa;
    font-size: 26px;
}

.menuitem span {
    display: block;
    width: 100%;
    padding-top: 5px;
    text-align: center;
    text-transform: uppercase;
    font-size: 14px;
    font-weight: 300;
    letter-spacing: 2px;
}


/* Footer */

footer {
    background-color: #525252;
    color: #fafafa;
    min-height: 120px;
}

.cv-pdf i {
    font-size: 18px;
    color: #fafafa;
    text-align: center;
    padding-left: 5px;
    transition: all 0.25s ease-in-out;
    -moz-transition: all 0.25s ease-in-out;
    -webkit-transition: all 0.25s ease-in-out;
    -o-transition: all 0.25s ease-in-out;
}

.cv-pdf i:hover {
    color: #e84610;
}

.social-links {
    padding-bottom: 15px;
}

.social-links li a i {
    padding: 12px 5px;
    font-size: 25px;
    line-height: 7px;
    text-align: center;
    color: #fafafa;
    transition: all 0.25s ease-in-out;
    -moz-transition: all 0.25s ease-in-out;
    -webkit-transition: all 0.25s ease-in-out;
    -o-transition: all 0.25s ease-in-out;
}

.social-links li a i:hover {
    color: #e84610;
}

#footer-details {
    padding: 20px;
}

/* Three Reasons */
.three-reasons-icon {
    font-size: 26px;
    color: #e67e22;
}

.three-reasons-heading {
    margin-bottom: 15px;
}

